# CMakeGitTest

./: CMakeLists.txt  FindVersion.cmake  main.cpp  version.cpp.in  version.h
